fix radio logos height on mobile

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ body {
   padding: 0;
   line-height: 1.6;
   background-color: var(--background);
-  background-image: url("/assets/grain-bg.png");
   color: var(--text-colour);
   text-transform: uppercase;
 }
@@ -60,7 +59,7 @@ p {
 }
 
 main {
-  padding: 20px;
+  padding: 0px 30px;
   overflow-x: hidden;
   max-width: 100vw;
   position: relative;
@@ -113,24 +112,37 @@ main {
   margin-bottom: 15vh;
 }
 
+.event-details {
+  margin-bottom: 80px;
+}
+
+@media (max-width: 1024px) {
+  .event-details {
+    margin-bottom: 20px;
+  }
+}
+
 @media (max-width: 1024px) {
   #info {
     text-align: left;
+    margin-bottom: 30px;
   }
 
   #logos {
     justify-content: flex-start;
   }
 
-  .link {
+  #learn-more {
     display: inline-flex;
+    margin-bottom: 80px;
+    margin-top: 60px;
   }
 }
 
 @media (max-width: 1024px) {
   #logo {
     width: 350px;
-    max-width: 90vw;
+    max-width: calc(100vw - 60px);
   }
 
   #radio-logos-wrapper {
@@ -138,7 +150,7 @@ main {
     top: 50vh;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 85vh;
+    height: 90vh;
     width: auto;
   }
 
@@ -152,7 +164,7 @@ main {
   }
 }
 
-.link {
+#learn-more {
   border: var(--text-colour) 1px solid;
   padding: 0.75rem 1rem 0.5rem 1rem;
   text-decoration: none;
@@ -160,13 +172,13 @@ main {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 80px;
-  margin-top: 60px;
+  margin-bottom: 60px;
+  margin-top: 40px;
   line-height: 1;
   font-weight: 900;
 }
 
-.link:hover {
+#learn-more:hover {
   background-color: var(--text-colour);
   color: var(--background);
 }
